# MicrobioLink2

./: .bumpversion.cfg  .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CODING_STYLE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/setup/: action.yml
.github/workflows/: ci-docs.yml  ci-linting.yml  ci-testing-unit.yml
about/: index.html
case_study_input/input/: enterocyte_colon_CD_zscore.csv
case_study_input/input/aiupred_data/: binding_transform  disorder_decoder.pt  embedding_binding.pt  embedding_disorder.pt
case_study_input/input/bacterial_protein/: BT_BEV_domains.tsv  OMV_proteins.csv
case_study_input/input/elm/: elm_classes_2020.tsv  elm_interaction_domains.tsv
case_study_input/input/human_protein/Enterocyte_Manual/: enterocyte_colon_CD_expressed_genes.csv  location_filtered_genes.csv
case_study_input/input/human_protein/Kong_et_al_avg/: colon_epi_average_expression_CD.csv
case_study_input/input/human_transcriptomics/: Enterocytes BEST4_degs_fc05.csv  colon_BEST4_enterocyte_CD.csv  enterocyte_colon_CD_zscore.csv  protein_sequences.fasta  protein_sequences.fasta.flat  protein_sequences.fasta.gdx  protein_sequences_test.fasta
case_study_input/input/protein_sequences/: A8MXK1.fasta  O00559.fasta  O60291.fasta  O60478.fasta  O75631.fasta  O94992.fasta  O95994.fasta  P08195.fasta  P08571.fasta  P08588.fasta  P17301.fasta  P19256.fasta  P25092.fasta  P35613.fasta  P40199.fasta  P43308.fasta  P51805.fasta  P53801.fasta  P55082.fasta  Q02505.fasta  Q06481.fasta  Q0VAQ4.fasta  Q12864.fasta  Q13258.fasta  Q14242.fasta  Q14626.fasta  Q16880.fasta  Q5NUL3.fasta  Q5T9L3.fasta  Q6GMR7.fasta  Q6NYC1.fasta  Q6UW56.fasta  Q6UXE8.fasta  Q6UXM1.fasta  Q7Z3F1.fasta  Q86XX4.fasta  Q8IYS2.fasta  Q8IZA0.fasta  Q8N4V1.fasta  Q8NBR0.fasta  (+27 more)
case_study_output/: MicrobioLink_AIUPRED_outcome.csv
case_study_output/output/Enrichment_analysis/: gget_enrichr_results_reactome_usecase_hmi.csv  gget_enrichr_results_reactome_usecase_tiedie.csv
case_study_output/output/HMI/: BT_enterocyte_cd_prediction_output_usecase.csv  BT_enterocyte_cd_prediction_output_usecase_new.csv
case_study_output/output/HMI/IUPred/: BT_enterocyte_idr_cd_usecase.csv
case_study_output/output/TieDIE/: contextualised_regulator-deg_network.txt  contextualised_regulators_of_degs.txt  heats.NA  node.stats  node_types.NA  report.txt  tiedie.cn.sif  tiedie.cn.sif.txt  tiedie.sif  usecase_downstream.input  usecase_final_network.txt  usecase_node_table.txt  usecase_pathway.sif  usecase_upstream.input
case_study_output/output/cys_network/hmi/: usecase_hmi.cys
case_study_output/output/cys_network/network_propagation/: usecase_tiedie.cys
community/: index.html
community/contribute/: index.html
community/contribute-codebase/: index.html
community/contribute-docs/: index.html
docs/: about.md  index.md  installation.md
docs/community/: contribute-codebase.md  contribute-docs.md  contribute.md  index.md
docs/reference/source/microbiolink/: _metadata-docs.md
installation/: index.html
learn/explanation/: index.html
learn/guides/: index.html
learn/tutorials/quickstart/: index.html
learn/tutorials/tutorial0001_basics/: index.html
microbiolink/: AIUPred.py  AIUPred_old.py  DMI.py  __init__.py  _metadata.py  cli.py  download_bacterial_proteins.py  get_human_fasta.py  idr_prediction.py  idr_prediction_score.py  motif_monte_carlo_filter.py  z_score_filter_terminal.py
microbiolink-project/design-philosophy/: index.html
microbiolink-project/project/: index.html
microbiolink-project/use-cases/: index.html
microbiolink_api/: __init__.py  dmi.py  exceptions.py  expression.py  microbiome.py  workflows.py
microbiolink_api/resources/: __init__.py  elm_classes.tsv  elm_interaction_domains.tsv
reference/source/microbiolink/_metadata-docs/: index.html
scripts/: test-multi-py.py
search/: search_index.json
tests/: test_placeholder.py
toy_example/: bacterial_proteins.csv  human_proteins.csv
tutorials/mock_data/: 01_mock_dmi.ipynb  02_mock_dmi_aiupred_monte_carlo.ipynb  README.md
workflow/: AIUPred.py  DMI.py  DMI_terminal.py  aiupred_lib.py  download_bacterial_proteins.py  enrichr.py  enrichr_id_database_ranking.py  get_human_fasta.py  idr_prediction.py  idr_prediction_score.py  iupred2a.py  microbiolink_env.yml  processing_tiedie_output.py  requirements.txt  z-score_filter_terminal.py
workflow/TieDie/TieDie_input_process/: tiedie_input_processing.py
workflow/utils/deploy/: Dockerfile  PreprocessingPython.sh
workflow/utils/deploy/downstreamanalysis/Python/: Analysis_config.yaml  Downstream_Analysis.py
workflow/utils/deploy/preprocessing/Python/: configuration.yaml  preprocessing.py
workflow/utils/deploy/preprocessing/Rpreprocessing/: .RData  .Rhistory  DESCRIPTION  NAMESPACE  get_log_file.R
workflow/utils/preprocessing/: configuration.yaml  preprocessing.py
workflow/utils/preprocessing/Python/: configuration.yaml  preprocessing.py
workflow/utils/preprocessing/Python/test/: test_preprocessing.py
workflow/utils/preprocessing/R/: checking_config.R  checking_fastq_files.R  checking_log_file.R  loading_config_file.R
workflow/utils/preprocessing/Rpreprocessing/: .RData  .Rhistory  DESCRIPTION  NAMESPACE
workflow/utils/preprocessing/Rpreprocessing/R/: QC_10x.R  add_log_message.R  checking_config.R  checking_configuration.R  checking_fastq_files.R  checking_fastq_files_2.R  checking_log_file.R  loading_config_file.R  log_file.R  normalize_all_samples.R  pair_fastqs.R  preparing_start_genome.R  preprocessing_main.R  run_star_solo_unified.R
workflow/utils/preprocessing/Rpreprocessing/man/: QC_10x.Rd  check_fastq_files.Rd  checking.configuration.Rd  checking.log.file.Rd  loading.config.file.Rd  loading_config_file.Rd  log.Rd  main.Rd  normalize_all_samples.Rd  pair_fastqs.Rd  prepare_STAR_genome.Rd  run_STAR_solo_unified.Rd  write_log.Rd
workflow/utils/preprocessing/Rpreprocessing/test_scripts/: test_adding_log_message.R  test_check_fastq_files_2.R  test_checking_config.R  (+4 more)
(+43 files in other folders)
