[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Leila Potari-Gul", email="l.potari-gul@imperial.ac.uk"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
]
description = "Prediction of microbe-host protein interactions using domain-motif interactions and intrinsically disordered regions"
license = "BSD-2-Clause"
maintainers = [
    {name="Leila Potari-Gul", email="l.potari-gul@imperial.ac.uk"},
]
name = "microbiolink"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "distlib",
    "pre-commit",
    "bump2version",
    "twine",
]
docs = [
    "mkdocs-material>=9.6.14",
    "pymdown-extensions>=10.15",
    "mkdocstrings[python]>=0.29.1,<0.30"
]
tests = [
    "pytest>=6.0",
    "pytest-cov",
    "coverage>=6.0",
    "codecov-cli>=10.2.0",
    "diff_cover",
    "ruff",
]

[project.urls]
Documentation = "https://korcsmarosgroup.github.io/MicrobioLink2"
Homepage = "https://github.com/korcsmarosgroup/MicrobioLink2"
Issues = "https://github.com/korcsmarosgroup/MicrobioLink2/issues"
Repository = "https://github.com/korcsmarosgroup/MicrobioLink2"


[tool.bandit]
exclude_dirs = [".venv", "venv", "build", "dist"]
skips = [
    "B101"  # Name: assert_used
]

[tool.coverage.run]
omit = [
	"**/test_*.py",
]
source = ["microbiolink"]

[tool.cruft]
skip = [
  "tests",
  "microbiolink/__init__.py",
  "microbiolink/_metadata.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]
filterwarnings = [
]
python_files = "test_*.py"
testpaths = [
  "tests",
]
xfail_strict = true

[tool.rstcheck]
ignore_directives = [
    "automodule",
    "toctree",
]
ignore_messages = '(Unknown target name:.*|No (directive|role) entry for "(auto)?(class|method|property|function|func|mod|attr)" in module "docutils\.parsers\.rst\.languages\.en"\.)'
ignore_roles = ["ref"]
report_level = "INFO"

[tool.ruff]
extend-include = [ "*.ipynb" ]
line-length = 80
target-version = "py39"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
exclude = [
    "docs/_build"
]
ignore = [
    # flake8-bugbear (B)
    "B008",  # Name: function-call-in-default-argument
    "B024",  # Name: abstract-base-class-without-abstract-method
    # pydocstyle (D)
    "D100",  # Name: undocumented-public-module
    "D104",  # Name: undocumented-public-package
    "D105",  # Name: undocumented-magic-method
    "D107",  # Name: undocumented-public-init
    "D200",  # Name: unnecessary-multiline-docstring
    "D202",  # Name: blank-line-after-function
    "D203",  # Name: incorrect-blank-line-before-class
    "D213",  # Name: multi-line-summary-second-line
    "D400",  # Name: missing-trailing-period
    "D401",  # Name: non-imperative-mood
    # Error (E)
    "E251",  # Name: unexpected-spaces-around-keyword-parameter-equals
    "E303",  # Name: too-many-blank-lines
    "E501",  # Name: line too long
    "E731",  # Name: lambda-assignment
    "E741"  # allow I, O, l as variable names -> I is the identity matrix
]
select = [
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error detected by Pycodestyle
    "F",  # Errors detected by Pyflakes
    "I",  # isort
    "RUF100",  # Report unused noqa directives
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # Warning detected by Pycodestyle
    "Q",  # Consistent quotes
    "S307",  # eval() detection
    "ANN"  # flake8-annotations
]
unfixable = ["UP"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
known-first-party = [ "microbiolink" ]
known-third-party = ["numpy", "pandas"]
length-sort = true
lines-after-imports = 2
no-lines-before = ["local-folder"]
order-by-type = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["D104", "F401"]
"docs/*" = ["I"]
"docs/src/conf.py" = ["D100"]
"tests/*" = ["D"]
"tests/conftest.py" = ["D101", "D102", "D103", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"
