[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "microbiolink"
version = "0.0.1"
description = "Prediction of microbe-host protein interactions using domain-motif interactions and intrinsically disordered regions"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
  {name = "Leila Potari-Gul", email = "l.potari-gul@imperial.ac.uk"},
]
maintainers = [
  {name = "Leila Potari-Gul", email = "l.potari-gul@imperial.ac.uk"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "gget>=0.28.6",
  "matplotlib>=3.8",
  "mygene>=3.2.2",
  "numpy>=1.26.4,<2",
  "omnipath>=1.0.8",
  "pandas>=2.2.2",
  "requests>=2.31",
  "scipy>=1.13.1",
]

[project.scripts]
microbiolink-aiupred = "microbiolink.cli:aiupred"
microbiolink-dmi = "microbiolink.cli:dmi"
microbiolink-download-bacterial-proteins = "microbiolink.cli:download_bacterial_proteins"
microbiolink-enrichr-ranking = "microbiolink.cli:enrichr_id_database_ranking"
microbiolink-get-human-fasta = "microbiolink.cli:get_human_fasta"
microbiolink-idr-prediction = "microbiolink.cli:idr_prediction"
microbiolink-idr-prediction-score = "microbiolink.cli:idr_prediction_score"
microbiolink-processing-tiedie-output = "microbiolink.cli:processing_tiedie_output"
microbiolink-tiedie-input-processing = "microbiolink.cli:tiedie_input_processing"
microbiolink-zscore-filter = "microbiolink.cli:z_score_filter_terminal"

[project.optional-dependencies]
idr = [
  "numpy>=1.26.4,<2",
  "biopython>=1.84",
  "torch>=1.9",
  "iupred @ git+https://github.com/saezlab/iupred.git",
]
workflow = [
  "tiedie @ git+https://github.com/saezlab/tiedie.git",
]

[project.urls]
Documentation = "https://korcsmarosgroup.github.io/MicrobioLink2"
Homepage = "https://github.com/korcsmarosgroup/MicrobioLink2"
Issues = "https://github.com/korcsmarosgroup/MicrobioLink2/issues"
Repository = "https://github.com/korcsmarosgroup/MicrobioLink2"

[tool.hatch.build.targets.wheel]
packages = ["microbiolink", "microbiolink_api"]

[tool.hatch.build]
include = [
  "microbiolink_api/resources/*.tsv",
]

[tool.hatch.metadata]
allow-direct-references = true
